Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14242

QHeaderView::setSectionHidden() breaks QHeaderView::length()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 4.5.0
    • Widgets: Itemviews
    • None
    • 125016ad241125176e5bebab94eebcf50fac20bc

    Description

      When in ResizeToContents mode call to QHeaderView::setSectionHidden() breaks QHeaderView::length(), i.e. following call to length() yields wrong value.
      For more elaborate description please see the attached source file.

      Attachments

        1. bug14242.png
          bug14242.png
          33 kB
        2. bug14242.png
          bug14242.png
          33 kB
        3. main.cpp
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            w00t Robin Burchell
            de666 de
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes